analisador-semantico-uni-3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao_classe programa
Rule 2     programa -> declaracao_classe
Rule 3     declaracao_classe -> PALAVRA_CLASS CLASSE tipo_classe_primaria
Rule 4     tipo_classe_primaria -> declaracao_classe_definida
Rule 5     tipo_classe_primaria -> declaracao_classe_primitiva
Rule 6     declaracao_classe_primitiva -> SUBCLASSOF continuacao_subclassof caso_disjoint_opcional
Rule 7     declaracao_classe_primitiva -> SUBCLASSOF continuacao_subclassof
Rule 8     declaracao_classe_primitiva -> SUBCLASSOF caso_disjoint_opcional
Rule 9     declaracao_classe_primitiva -> error continuacao_subclassof caso_disjoint_opcional
Rule 10    declaracao_classe_primitiva -> error continuacao_subclassof
Rule 11    declaracao_classe_primitiva -> SUBCLASSOF error
Rule 12    caso_individuals_opcional -> INDIVIDUALS NOME_INDIVIDUO
Rule 13    caso_individuals_opcional -> INDIVIDUALS NOME_INDIVIDUO CARACTERE_ESPECIAL continuacao_individuals
Rule 14    caso_individuals_opcional -> INDIVIDUALS error
Rule 15    caso_individuals_opcional -> INDIVIDUALS error CARACTERE_ESPECIAL continuacao_individuals
Rule 16    continuacao_individuals -> NOME_INDIVIDUO
Rule 17    continuacao_individuals -> NOME_INDIVIDUO CARACTERE_ESPECIAL continuacao_individuals
Rule 18    continuacao_individuals -> error
Rule 19    continuacao_individuals -> error CARACTERE_ESPECIAL continuacao_individuals
Rule 20    caso_disjoint_opcional -> DISJOINTCLASSES continuacao_disjoint_opcional caso_individuals_opcional
Rule 21    caso_disjoint_opcional -> DISJOINTWITH continuacao_disjoint_opcional caso_individuals_opcional
Rule 22    caso_disjoint_opcional -> DISJOINTCLASSES continuacao_disjoint_opcional error
Rule 23    caso_disjoint_opcional -> DISJOINTWITH continuacao_disjoint_opcional error
Rule 24    caso_disjoint_opcional -> error continuacao_disjoint_opcional caso_individuals_opcional
Rule 25    continuacao_disjoint_opcional -> CLASSE
Rule 26    continuacao_disjoint_opcional -> CLASSE CARACTERE_ESPECIAL continuacao_disjoint_opcional
Rule 27    continuacao_disjoint_opcional -> error
Rule 28    continuacao_disjoint_opcional -> CLASSE CARACTERE_ESPECIAL error
Rule 29    continuacao_subclassof -> PROPRIEDADE SOME CLASSE
Rule 30    continuacao_subclassof -> CLASSE CARACTERE_ESPECIAL declaracao_classe_axioma_fechamento
Rule 31    continuacao_subclassof -> PROPRIEDADE SOME NAMESPACE TIPO
Rule 32    continuacao_subclassof -> PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
Rule 33    continuacao_subclassof -> PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
Rule 34    continuacao_subclassof -> CLASSE caso_ands
Rule 35    continuacao_subclassof -> CLASSE
Rule 36    declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto caso_individuals_opcional
Rule 37    declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto
Rule 38    declaracao_classe_definida -> EQUIVALENT_TO declaracao_classe_enumerada
Rule 39    declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto SUBCLASSOF continuacao_subclassof
Rule 40    declaracao_classe_definida -> continuacao_subclassof EQUIVALENT_TO continuacao_equivalentto
Rule 41    continuacao_equivalentto -> CLASSE OR declaracao_classe_coberta
Rule 42    continuacao_equivalentto -> PALAVRA_RESERVADA CLASSE EQUIVALENT_TO CLASSE declaracao_classe_aninhada
Rule 43    continuacao_equivalentto -> CLASSE AND PROPRIEDADE SOME_ONLY casos_parentese
Rule 44    continuacao_equivalentto -> CLASSE AND PROPRIEDADE SOME_ONLY CLASSE casos_parentese
Rule 45    continuacao_equivalentto -> CLASSE AND PROPRIEDADE SOME_ONLY classes_or caso_ands
Rule 46    continuacao_equivalentto -> CLASSE AND PROPRIEDADE SOME_ONLY classes_or
Rule 47    continuacao_equivalentto -> CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY casos_parentese FECHA_PARENT
Rule 48    continuacao_equivalentto -> CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY classes_or FECHA_PARENT
Rule 49    continuacao_equivalentto -> CLASSE AND ABRE_PARENT casos_parentese declaracao_classe_aninhada FECHA_PARENT
Rule 50    continuacao_equivalentto -> CLASSE AND ABRE_PARENT casos_parentese declaracao_classe_aninhada FECHA_PARENT caso_ands
Rule 51    continuacao_equivalentto -> CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY classes_or FECHA_PARENT caso_ands
Rule 52    continuacao_equivalentto -> CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY NAMESPACE TIPO CARACTERE_ESPECIAL OPERADORES CARDINALIDADE CARACTERE_ESPECIAL FECHA_PARENT
Rule 53    declaracao_classe_aninhada -> caso_ands
Rule 54    caso_ands -> AND casos_parentese caso_ands
Rule 55    caso_ands -> AND casos_sem_parentese caso_ands
Rule 56    caso_ands -> AND casos_parentese
Rule 57    caso_ands -> AND casos_sem_parentese
Rule 58    casos_parentese -> ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT
Rule 59    casos_parentese -> ABRE_PARENT PROPRIEDADE SOME_ONLY ABRE_PARENT classes_or FECHA_PARENT FECHA_PARENT
Rule 60    casos_parentese -> ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT
Rule 61    casos_parentese -> ABRE_PARENT casos_parentese OR casos_parentese FECHA_PARENT
Rule 62    casos_parentese -> ABRE_PARENT casos_parentese AND casos_parentese FECHA_PARENT
Rule 63    casos_parentese -> ABRE_PARENT casos_parentese FECHA_PARENT
Rule 64    casos_parentese -> ABRE_PARENT PROPRIEDADE VALUE CLASSE FECHA_PARENT
Rule 65    casos_sem_parentese -> PROPRIEDADE SOME_ONLY CLASSE
Rule 66    casos_sem_parentese -> PROPRIEDADE ONLY casos_parentese
Rule 67    casos_sem_parentese -> PROPRIEDADE PALAVRA_RESERVADA CLASSE
Rule 68    casos_sem_parentese -> PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE
Rule 69    declaracao_classe_axioma_fechamento -> regras_classe_axioma_fechamento
Rule 70    regras_classe_axioma_fechamento -> PROPRIEDADE SOME_ONLY CLASSE
Rule 71    regras_classe_axioma_fechamento -> PROPRIEDADE rec_propriedade SOME_ONLY CLASSE
Rule 72    regras_classe_axioma_fechamento -> PROPRIEDADE rec_propriedade SOME_ONLY CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
Rule 73    regras_classe_axioma_fechamento -> PROPRIEDADE SOME_ONLY CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
Rule 74    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT
Rule 75    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT AND regras_classe_axioma_fechamento
Rule 76    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT CARACTERE_ESPECIAL regras_classe_axioma_fechamento
Rule 77    regras_classe_axioma_fechamento -> PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE
Rule 78    regras_classe_axioma_fechamento -> PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
Rule 79    regras_classe_axioma_fechamento -> PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE
Rule 80    regras_classe_axioma_fechamento -> PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
Rule 81    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT
Rule 82    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT CARACTERE_ESPECIAL regras_classe_axioma_fechamento
Rule 83    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT AND regras_classe_axioma_fechamento
Rule 84    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL FECHA_PARENT regras_classe_axioma_fechamento
Rule 85    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT
Rule 86    regras_classe_axioma_fechamento -> ABRE_PARENT PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL FECHA_PARENT regras_classe_axioma_fechamento
Rule 87    rec_propriedade -> PROPRIEDADE
Rule 88    rec_propriedade -> PROPRIEDADE PROPRIEDADE
Rule 89    SOME_ONLY -> SOME
Rule 90    SOME_ONLY -> ONLY
Rule 91    classes_or -> CLASSE OR classes_or
Rule 92    classes_or -> CLASSE
Rule 93    classes_or -> ABRE_PARENT classes_or FECHA_PARENT
Rule 94    declaracao_classe_enumerada -> ABRE_CHAVE classes_enumeradas FECHA_CHAVE
Rule 95    classes_enumeradas -> CLASSE CARACTERE_ESPECIAL classes_enumeradas
Rule 96    classes_enumeradas -> CLASSE
Rule 97    declaracao_classe_coberta -> classes_or

Terminals, with rules where they appear

ABRE_CHAVE           : 94
ABRE_PARENT          : 47 48 49 50 51 52 58 59 59 60 61 62 63 64 74 75 76 81 82 83 84 85 86 93
AND                  : 43 44 45 46 47 48 49 50 51 52 54 55 56 57 62 75 83
CARACTERE_ESPECIAL   : 13 15 17 19 26 28 30 32 33 52 52 72 73 76 78 80 82 84 86 95
CARDINALIDADE        : 52 60 68 77 78 79 80 81 82 83 84 85 86
CLASSE               : 3 25 26 28 29 30 32 34 35 41 42 42 43 44 44 45 46 47 48 49 50 51 52 58 60 64 65 67 68 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 91 92 95 96
COMPARADORES         : 60 68 77 78 79 80 81 82 83 84 85 86
DISJOINTCLASSES      : 20 22
DISJOINTWITH         : 21 23
EQUIVALENT_TO        : 36 37 38 39 40 42
FECHA_CHAVE          : 94
FECHA_PARENT         : 47 48 49 50 51 52 58 59 59 60 61 62 63 64 74 75 76 81 82 83 84 85 86 93
INDIVIDUALS          : 12 13 14 15
NAMESPACE            : 31 33 52
NOME_INDIVIDUO       : 12 13 16 17
ONLY                 : 66 90
OPERADORES           : 52
OR                   : 41 61 91
PALAVRA_CLASS        : 3
PALAVRA_RESERVADA    : 42 67
PROPRIEDADE          : 29 31 32 33 43 44 45 46 47 48 51 52 58 59 60 64 65 66 67 68 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 88
SOME                 : 29 31 32 33 89
SUBCLASSOF           : 6 7 8 11 39
TIPO                 : 31 33 52
VALUE                : 64
error                : 9 10 11 14 15 18 19 22 23 24 27 28

Nonterminals, with rules where they appear

SOME_ONLY            : 43 44 45 46 47 48 51 52 58 59 65 70 71 72 73 74 75 76
caso_ands            : 34 45 50 51 53 54 55
caso_disjoint_opcional : 6 8 9
caso_individuals_opcional : 20 21 24 36
casos_parentese      : 43 44 47 49 50 54 56 61 61 62 62 63 66
casos_sem_parentese  : 55 57
classes_enumeradas   : 94 95
classes_or           : 45 46 48 51 59 91 93 97
continuacao_disjoint_opcional : 20 21 22 23 24 26
continuacao_equivalentto : 36 37 39 40
continuacao_individuals : 13 15 17 19
continuacao_subclassof : 6 7 9 10 32 33 39 40
declaracao_classe    : 1 2
declaracao_classe_aninhada : 42 49 50
declaracao_classe_axioma_fechamento : 30
declaracao_classe_coberta : 41
declaracao_classe_definida : 4
declaracao_classe_enumerada : 38
declaracao_classe_primitiva : 5
programa             : 1 0
rec_propriedade      : 71 72 77 78 85 86
regras_classe_axioma_fechamento : 69 72 73 75 76 78 80 82 83 84 86
tipo_classe_primaria : 3

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao_classe programa
    (2) programa -> . declaracao_classe
    (3) declaracao_classe -> . PALAVRA_CLASS CLASSE tipo_classe_primaria

    PALAVRA_CLASS   shift and go to state 3

    programa                       shift and go to state 1
    declaracao_classe              shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao_classe . programa
    (2) programa -> declaracao_classe .
    (1) programa -> . declaracao_classe programa
    (2) programa -> . declaracao_classe
    (3) declaracao_classe -> . PALAVRA_CLASS CLASSE tipo_classe_primaria

    $end            reduce using rule 2 (programa -> declaracao_classe .)
    PALAVRA_CLASS   shift and go to state 3

    declaracao_classe              shift and go to state 2
    programa                       shift and go to state 4

state 3

    (3) declaracao_classe -> PALAVRA_CLASS . CLASSE tipo_classe_primaria

    CLASSE          shift and go to state 5


state 4

    (1) programa -> declaracao_classe programa .

    $end            reduce using rule 1 (programa -> declaracao_classe programa .)


state 5

    (3) declaracao_classe -> PALAVRA_CLASS CLASSE . tipo_classe_primaria
    (4) tipo_classe_primaria -> . declaracao_classe_definida
    (5) tipo_classe_primaria -> . declaracao_classe_primitiva
    (36) declaracao_classe_definida -> . EQUIVALENT_TO continuacao_equivalentto caso_individuals_opcional
    (37) declaracao_classe_definida -> . EQUIVALENT_TO continuacao_equivalentto
    (38) declaracao_classe_definida -> . EQUIVALENT_TO declaracao_classe_enumerada
    (39) declaracao_classe_definida -> . EQUIVALENT_TO continuacao_equivalentto SUBCLASSOF continuacao_subclassof
    (40) declaracao_classe_definida -> . continuacao_subclassof EQUIVALENT_TO continuacao_equivalentto
    (6) declaracao_classe_primitiva -> . SUBCLASSOF continuacao_subclassof caso_disjoint_opcional
    (7) declaracao_classe_primitiva -> . SUBCLASSOF continuacao_subclassof
    (8) declaracao_classe_primitiva -> . SUBCLASSOF caso_disjoint_opcional
    (9) declaracao_classe_primitiva -> . error continuacao_subclassof caso_disjoint_opcional
    (10) declaracao_classe_primitiva -> . error continuacao_subclassof
    (11) declaracao_classe_primitiva -> . SUBCLASSOF error
    (29) continuacao_subclassof -> . PROPRIEDADE SOME CLASSE
    (30) continuacao_subclassof -> . CLASSE CARACTERE_ESPECIAL declaracao_classe_axioma_fechamento
    (31) continuacao_subclassof -> . PROPRIEDADE SOME NAMESPACE TIPO
    (32) continuacao_subclassof -> . PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (33) continuacao_subclassof -> . PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
    (34) continuacao_subclassof -> . CLASSE caso_ands
    (35) continuacao_subclassof -> . CLASSE

    EQUIVALENT_TO   shift and go to state 10
    SUBCLASSOF      shift and go to state 11
    error           shift and go to state 13
    PROPRIEDADE     shift and go to state 14
    CLASSE          shift and go to state 6

    tipo_classe_primaria           shift and go to state 7
    declaracao_classe_definida     shift and go to state 8
    declaracao_classe_primitiva    shift and go to state 9
    continuacao_subclassof         shift and go to state 12

state 6

    (30) continuacao_subclassof -> CLASSE . CARACTERE_ESPECIAL declaracao_classe_axioma_fechamento
    (34) continuacao_subclassof -> CLASSE . caso_ands
    (35) continuacao_subclassof -> CLASSE .
    (54) caso_ands -> . AND casos_parentese caso_ands
    (55) caso_ands -> . AND casos_sem_parentese caso_ands
    (56) caso_ands -> . AND casos_parentese
    (57) caso_ands -> . AND casos_sem_parentese

    CARACTERE_ESPECIAL shift and go to state 15
    EQUIVALENT_TO   reduce using rule 35 (continuacao_subclassof -> CLASSE .)
    DISJOINTCLASSES reduce using rule 35 (continuacao_subclassof -> CLASSE .)
    DISJOINTWITH    reduce using rule 35 (continuacao_subclassof -> CLASSE .)
    error           reduce using rule 35 (continuacao_subclassof -> CLASSE .)
    PALAVRA_CLASS   reduce using rule 35 (continuacao_subclassof -> CLASSE .)
    $end            reduce using rule 35 (continuacao_subclassof -> CLASSE .)
    AND             shift and go to state 17

    caso_ands                      shift and go to state 16

state 7

    (3) declaracao_classe -> PALAVRA_CLASS CLASSE tipo_classe_primaria .

    PALAVRA_CLASS   reduce using rule 3 (declaracao_classe -> PALAVRA_CLASS CLASSE tipo_classe_primaria .)
    $end            reduce using rule 3 (declaracao_classe -> PALAVRA_CLASS CLASSE tipo_classe_primaria .)


state 8

    (4) tipo_classe_primaria -> declaracao_classe_definida .

    PALAVRA_CLASS   reduce using rule 4 (tipo_classe_primaria -> declaracao_classe_definida .)
    $end            reduce using rule 4 (tipo_classe_primaria -> declaracao_classe_definida .)


state 9

    (5) tipo_classe_primaria -> declaracao_classe_primitiva .

    PALAVRA_CLASS   reduce using rule 5 (tipo_classe_primaria -> declaracao_classe_primitiva .)
    $end            reduce using rule 5 (tipo_classe_primaria -> declaracao_classe_primitiva .)


state 10

    (36) declaracao_classe_definida -> EQUIVALENT_TO . continuacao_equivalentto caso_individuals_opcional
    (37) declaracao_classe_definida -> EQUIVALENT_TO . continuacao_equivalentto
    (38) declaracao_classe_definida -> EQUIVALENT_TO . declaracao_classe_enumerada
    (39) declaracao_classe_definida -> EQUIVALENT_TO . continuacao_equivalentto SUBCLASSOF continuacao_subclassof
    (41) continuacao_equivalentto -> . CLASSE OR declaracao_classe_coberta
    (42) continuacao_equivalentto -> . PALAVRA_RESERVADA CLASSE EQUIVALENT_TO CLASSE declaracao_classe_aninhada
    (43) continuacao_equivalentto -> . CLASSE AND PROPRIEDADE SOME_ONLY casos_parentese
    (44) continuacao_equivalentto -> . CLASSE AND PROPRIEDADE SOME_ONLY CLASSE casos_parentese
    (45) continuacao_equivalentto -> . CLASSE AND PROPRIEDADE SOME_ONLY classes_or caso_ands
    (46) continuacao_equivalentto -> . CLASSE AND PROPRIEDADE SOME_ONLY classes_or
    (47) continuacao_equivalentto -> . CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY casos_parentese FECHA_PARENT
    (48) continuacao_equivalentto -> . CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY classes_or FECHA_PARENT
    (49) continuacao_equivalentto -> . CLASSE AND ABRE_PARENT casos_parentese declaracao_classe_aninhada FECHA_PARENT
    (50) continuacao_equivalentto -> . CLASSE AND ABRE_PARENT casos_parentese declaracao_classe_aninhada FECHA_PARENT caso_ands
    (51) continuacao_equivalentto -> . CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY classes_or FECHA_PARENT caso_ands
    (52) continuacao_equivalentto -> . CLASSE AND ABRE_PARENT PROPRIEDADE SOME_ONLY NAMESPACE TIPO CARACTERE_ESPECIAL OPERADORES CARDINALIDADE CARACTERE_ESPECIAL FECHA_PARENT
    (94) declaracao_classe_enumerada -> . ABRE_CHAVE classes_enumeradas FECHA_CHAVE

    CLASSE          shift and go to state 20
    PALAVRA_RESERVADA shift and go to state 21
    ABRE_CHAVE      shift and go to state 22

    continuacao_equivalentto       shift and go to state 18
    declaracao_classe_enumerada    shift and go to state 19

state 11

    (6) declaracao_classe_primitiva -> SUBCLASSOF . continuacao_subclassof caso_disjoint_opcional
    (7) declaracao_classe_primitiva -> SUBCLASSOF . continuacao_subclassof
    (8) declaracao_classe_primitiva -> SUBCLASSOF . caso_disjoint_opcional
    (11) declaracao_classe_primitiva -> SUBCLASSOF . error
    (29) continuacao_subclassof -> . PROPRIEDADE SOME CLASSE
    (30) continuacao_subclassof -> . CLASSE CARACTERE_ESPECIAL declaracao_classe_axioma_fechamento
    (31) continuacao_subclassof -> . PROPRIEDADE SOME NAMESPACE TIPO
    (32) continuacao_subclassof -> . PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (33) continuacao_subclassof -> . PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
    (34) continuacao_subclassof -> . CLASSE caso_ands
    (35) continuacao_subclassof -> . CLASSE
    (20) caso_disjoint_opcional -> . DISJOINTCLASSES continuacao_disjoint_opcional caso_individuals_opcional
    (21) caso_disjoint_opcional -> . DISJOINTWITH continuacao_disjoint_opcional caso_individuals_opcional
    (22) caso_disjoint_opcional -> . DISJOINTCLASSES continuacao_disjoint_opcional error
    (23) caso_disjoint_opcional -> . DISJOINTWITH continuacao_disjoint_opcional error
    (24) caso_disjoint_opcional -> . error continuacao_disjoint_opcional caso_individuals_opcional

    error           shift and go to state 25
    PROPRIEDADE     shift and go to state 14
    CLASSE          shift and go to state 6
    DISJOINTCLASSES shift and go to state 26
    DISJOINTWITH    shift and go to state 27

    continuacao_subclassof         shift and go to state 23
    caso_disjoint_opcional         shift and go to state 24

state 12

    (40) declaracao_classe_definida -> continuacao_subclassof . EQUIVALENT_TO continuacao_equivalentto

    EQUIVALENT_TO   shift and go to state 28


state 13

    (9) declaracao_classe_primitiva -> error . continuacao_subclassof caso_disjoint_opcional
    (10) declaracao_classe_primitiva -> error . continuacao_subclassof
    (29) continuacao_subclassof -> . PROPRIEDADE SOME CLASSE
    (30) continuacao_subclassof -> . CLASSE CARACTERE_ESPECIAL declaracao_classe_axioma_fechamento
    (31) continuacao_subclassof -> . PROPRIEDADE SOME NAMESPACE TIPO
    (32) continuacao_subclassof -> . PROPRIEDADE SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (33) continuacao_subclassof -> . PROPRIEDADE SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof
    (34) continuacao_subclassof -> . CLASSE caso_ands
    (35) continuacao_subclassof -> . CLASSE

    PROPRIEDADE     shift and go to state 14
    CLASSE          shift and go to state 6

    continuacao_subclassof         shift and go to state 29

state 14

    (29) continuacao_subclassof -> PROPRIEDADE . SOME CLASSE
    (31) continuacao_subclassof -> PROPRIEDADE . SOME NAMESPACE TIPO
    (32) continuacao_subclassof -> PROPRIEDADE . SOME CLASSE CARACTERE_ESPECIAL continuacao_subclassof
    (33) continuacao_subclassof -> PROPRIEDADE . SOME NAMESPACE TIPO CARACTERE_ESPECIAL continuacao_subclassof

    SOME            shift and go to state 30


state 15

    (30) continuacao_subclassof -> CLASSE CARACTERE_ESPECIAL . declaracao_classe_axioma_fechamento
    (69) declaracao_classe_axioma_fechamento -> . regras_classe_axioma_fechamento
    (70) regras_classe_axioma_fechamento -> . PROPRIEDADE SOME_ONLY CLASSE
    (71) regras_classe_axioma_fechamento -> . PROPRIEDADE rec_propriedade SOME_ONLY CLASSE
    (72) regras_classe_axioma_fechamento -> . PROPRIEDADE rec_propriedade SOME_ONLY CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
    (73) regras_classe_axioma_fechamento -> . PROPRIEDADE SOME_ONLY CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
    (74) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT
    (75) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT AND regras_classe_axioma_fechamento
    (76) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT CARACTERE_ESPECIAL regras_classe_axioma_fechamento
    (77) regras_classe_axioma_fechamento -> . PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE
    (78) regras_classe_axioma_fechamento -> . PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
    (79) regras_classe_axioma_fechamento -> . PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE
    (80) regras_classe_axioma_fechamento -> . PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL regras_classe_axioma_fechamento
    (81) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT
    (82) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT CARACTERE_ESPECIAL regras_classe_axioma_fechamento
    (83) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT AND regras_classe_axioma_fechamento
    (84) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL FECHA_PARENT regras_classe_axioma_fechamento
    (85) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT
    (86) regras_classe_axioma_fechamento -> . ABRE_PARENT PROPRIEDADE rec_propriedade COMPARADORES CARDINALIDADE CLASSE CARACTERE_ESPECIAL FECHA_PARENT regras_classe_axioma_fechamento

    PROPRIEDADE     shift and go to state 33
    ABRE_PARENT     shift and go to state 34

    declaracao_classe_axioma_fechamento shift and go to state 31
    regras_classe_axioma_fechamento shift and go to state 32

state 16

    (34) continuacao_subclassof -> CLASSE caso_ands .

    EQUIVALENT_TO   reduce using rule 34 (continuacao_subclassof -> CLASSE caso_ands .)
    DISJOINTCLASSES reduce using rule 34 (continuacao_subclassof -> CLASSE caso_ands .)
    DISJOINTWITH    reduce using rule 34 (continuacao_subclassof -> CLASSE caso_ands .)
    error           reduce using rule 34 (continuacao_subclassof -> CLASSE caso_ands .)
    PALAVRA_CLASS   reduce using rule 34 (continuacao_subclassof -> CLASSE caso_ands .)
    $end            reduce using rule 34 (continuacao_subclassof -> CLASSE caso_ands .)


state 17

    (54) caso_ands -> AND . casos_parentese caso_ands
    (55) caso_ands -> AND . casos_sem_parentese caso_ands
    (56) caso_ands -> AND . casos_parentese
    (57) caso_ands -> AND . casos_sem_parentese
    (58) casos_parentese -> . ABRE_PARENT PROPRIEDADE SOME_ONLY CLASSE FECHA_PARENT
    (59) casos_parentese -> . ABRE_PARENT PROPRIEDADE SOME_ONLY ABRE_PARENT classes_or FECHA_PARENT FECHA_PARENT
    (60) casos_parentese -> . ABRE_PARENT PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE FECHA_PARENT
    (61) casos_parentese -> . ABRE_PARENT casos_parentese OR casos_parentese FECHA_PARENT
    (62) casos_parentese -> . ABRE_PARENT casos_parentese AND casos_parentese FECHA_PARENT
    (63) casos_parentese -> . ABRE_PARENT casos_parentese FECHA_PARENT
    (64) casos_parentese -> . ABRE_PARENT PROPRIEDADE VALUE CLASSE FECHA_PARENT
    (65) casos_sem_parentese -> . PROPRIEDADE SOME_ONLY CLASSE
    (66) casos_sem_parentese -> . PROPRIEDADE ONLY casos_parentese
    (67) casos_sem_parentese -> . PROPRIEDADE PALAVRA_RESERVADA CLASSE
    (68) casos_sem_parentese -> . PROPRIEDADE COMPARADORES CARDINALIDADE CLASSE

    ABRE_PARENT     shift and go to state 37
    PROPRIEDADE     shift and go to state 38

    casos_parentese                shift and go to state 35
    casos_sem_parentese            shift and go to state 36

state 18

    (36) declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto . caso_individuals_opcional
    (37) declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto .
    (39) declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto . SUBCLASSOF continuacao_subclassof
    (12) caso_individuals_opcional -> . INDIVIDUALS NOME_INDIVIDUO
    (13) caso_individuals_opcional -> . INDIVIDUALS NOME_INDIVIDUO CARACTERE_ESPECIAL continuacao_individuals
    (14) caso_individuals_opcional -> . INDIVIDUALS error
    (15) caso_individuals_opcional -> . INDIVIDUALS error CARACTERE_ESPECIAL continuacao_individuals

    PALAVRA_CLASS   reduce using rule 37 (declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto .)
    $end            reduce using rule 37 (declaracao_classe_definida -> EQUIVALENT_TO continuacao_equivalentto .)
    SUBCLASSOF      shift and go to state 40
    INDIVIDUALS     shift and go to state 41

    caso_individuals_opcional      shift and go to state 39

state 19

    (38) declaracao_classe_definida -> EQUIVALENT_TO declaracao_classe_enumerada .

    PALAVRA_CLASS   reduce using rule 38 (declaracao_classe_definida -> EQUIVALENT_TO declaracao_classe_enumerada .)
    $end            reduce using rule 38 (declaracao_classe_definida -> EQUIVALENT_TO declaracao_classe_enumerada .)


state 20

    (41) continuacao_equivalentto -> CLASSE . OR declaracao_classe_coberta
    (43) continuacao_equivalentto -> CLASSE . AND PROPRIEDADE SOME_ONLY casos_parentese
    (44) continuacao_equivalentto -> CLASSE . AND PROPRIEDADE SOME_ONLY CLASSE casos_parentese
    (45) continuacao_equivalentto -> CLASSE . AND PROPRIEDADE SOME_ONLY classes_or caso_ands
    (46) continuacao_equivalentto -> CLASSE . AND PROPRIEDADE SOME_ONLY classes_or
    (47) continuacao_equivalentto -> CLASSE . AND ABRE_PARENT PROPRIEDADE SOME_ONLY casos_parentese FECHA_PARENT
    (48) continuacao_equivalentto -> CLASSE . AND ABRE_PARENT PROPRIEDADE SOME_ONLY classes_or FECHA_PARENT
    (49) continuacao_equivalentto -> CLASSE . AND ABRE_PARENT casos_parentese declaracao_classe_aninhada FECHA_PARENT
    (50) continuacao_equivalentto -> CLASSE . AND ABRE_PARENT casos_parentese declaracao_classe_aninhada FECHA_PARENT caso_ands
    (51) continuacao_equivalentto -> CLASSE . AND ABRE_PARENT PROPRIEDADE SOME_ONLY classes_or FECHA_PARENT caso_ands
    (52) continuacao_equivalentto -> CLASSE . AND ABRE_PARENT PROPRIEDADE SOME_ONLY NAMESPACE TIPO CARACTERE_ESPECIAL OPERADORES CARDINALIDADE CARACTERE_ESPECIAL FECHA_PARENT
